--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,8 @@
-mechanize==0.2.5
 beautifulsoup4==4.3.2
+Flask==0.10.1
+itsdangerous==0.24
+Jinja2==2.7.3
+MarkupSafe==0.23
+mechanize==0.2.5
+pygal==1.7.0
+Werkzeug==0.10.1
